@@ -15,6 +15,8 @@ config_defaults = {
     ("logging", "log_level") : 0,
     ("gui", "notification_popup") : 1,
     ("gui", "notification_flash_window") : 1,
+    ("gui", "open_main_window_hidden") : 0,
+    ("gui", "open_chat_window_hidden") : 1,
     ("gui", "time_stamp_format") : "(%H:%M:%S)",
 }
 
