@@ -1,6 +1,8 @@
 svn/head
 - remove the annoying permanent flicker of the buddy list
 - show own hostname in windows and taskbar icon
+- option to start up with hidden main window (only taskbar icon)
+- option to open new chat windows hidden (taskbar icon flashing instead)
  
 version 0.9.9.140
 - incompatible protocol change! (adding and removing buddies)  
